# endcord

./: README.md  build.py  main.py  pyproject.toml  setup.py  todo.txt
.github/: CONTRIBUTING.md  screenshots.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-release.yml
docs/: commands.md  configuration.md  extensions.md  keybindings.md
endcord/: app.py  assist_data.py  auth.py  client_properties.py  color.py  config.py  defaults.py  discord.py  downloader.py  formatter.py  game_detection.py  gateway.py  git.py  keybinding.py  media.py  media_inline.py  message.py  minimagic.py  parser.py  peripherals.py  perms.py  pgcurses.py  profile_manager.py  rpc.py  search.py  socks.py  terminal_utils.py  tui.py  utils.py  voice.py
endcord_cython/: formatter.pyx  tui.pyx
themes/: default.ini
tools/: generate_emoji.py  generate_wide_ranges.py  update_version.py
